--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  # firebase_core: any
-  # firebase_database: any
-  # cloud_firestore: ^3.1.4
+  cloud_firestore: ^3.1.5
+  firebase_core: ^1.10.6
+  firebase_database: ^9.0.4
+  firebase_storage: ^10.2.4
+  cloud_firestore_web: ^2.6.5
 
 
 dev_dependencies:
